--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -48,7 +48,7 @@ github:
     # enable for other branches (defaults to false)
     branches: false
     # enable for pull requests coming from this repo (defaults to true)
-    pullRequests: true
+    pullRequests: false
     # enable for pull requests coming from forks (defaults to false)
     pullRequestsFromForks: false
     # add a check to pull requests (defaults to true)
