--- a/pyproject.toml
+++ b/pyproject.toml
@@ -308,6 +308,8 @@ ignore = [
   "B904",
   # Magic number
   "PLR2004",
+  # comparison-with-itself
+  "PLR0124",
   # Consider `elif` instead of `else` then `if` to remove indentation level
   "PLR5501",
   # ambiguous-unicode-character-string
@@ -321,7 +323,9 @@ ignore = [
   # pairwise-over-zipped (>=PY310 only)
   "RUF007",
   # explicit-f-string-type-conversion
-  "RUF010"
+  "RUF010",
+  # mutable-class-default
+  "RUF012"
 ]
 
 exclude = [
