--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,9 @@ repository = 'https://github.com/pandas-dev/pandas'
 [project.entry-points."pandas_plotting_backends"]
 matplotlib = "pandas:plotting._matplotlib"
 
+[project.entry-points.numba_extensions]
+init = "pandas:core._numba._register_extensions"
+
 [project.optional-dependencies]
 test = ['hypothesis>=6.46.1', 'pytest>=7.3.2', 'pytest-xdist>=2.2.0', 'pytest-asyncio>=0.17.0']
 performance = ['bottleneck>=1.3.4', 'numba>=0.55.2', 'numexpr>=2.8.0']
