--- a/.github/actions/build_pandas/action.yml
+++ b/.github/actions/build_pandas/action.yml
@@ -16,8 +16,8 @@ runs:
 
     - name: Uninstall existing Pandas installation
       run: |
-        if pip list | grep -q ^pandas; then
-          pip uninstall -y pandas || true
+        if pip show pandas 1>/dev/null; then
+          pip uninstall -y pandas
         fi
       shell: bash -el {0}
 
