CI: Debug npdev build

--- a/.github/actions/build_pandas/action.yml
+++ b/.github/actions/build_pandas/action.yml
@@ -12,6 +12,7 @@ runs:
       run: |
         micromamba info
         micromamba list
+        pip list --pre
       shell: bash -el {0}
 
     - name: Uninstall existing Pandas installation
