Title capitalization and grammatical updates
Typo correction and grammar review in the "Pandas Documentation" page (https://pandas.pydata.org/docs/). The word "pandas" is not capitalized. Since it is the first word of a sentence, it must be capitalized. New grammar improvement results in a more concise  and clear explanation of what Pandas is.

--- a/doc/source/index.rst.template
+++ b/doc/source/index.rst.template
@@ -5,7 +5,7 @@
 .. module:: pandas
 
 ********************
-pandas documentation
+Pandas Documentation
 ********************
 
 **Date**: |today| **Version**: |version|
