BUG: Period.now not taking kwargs (#53375)

--- a/pandas/_libs/window/meson.build
+++ b/pandas/_libs/window/meson.build
@@ -1,6 +1,7 @@
 py.extension_module(
     'aggregations',
     ['aggregations.pyx'],
+    cython_args: ['-X always_allow_keywords=true'],
     include_directories: [inc_np, inc_pd],
     dependencies: [py_dep],
     subdir: 'pandas/_libs/window',
@@ -11,6 +12,7 @@ py.extension_module(
 py.extension_module(
     'indexers',
     ['indexers.pyx'],
+    cython_args: ['-X always_allow_keywords=true'],
     include_directories: [inc_np, inc_pd],
     dependencies: [py_dep],
     subdir: 'pandas/_libs/window',
