--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,25 +5,30 @@
 	"context": "..",
 	"dockerFile": "../Dockerfile",
 
-	// Use 'settings' to set *default* container specific settings.json values on container create.
-	// You can edit these settings after create using File > Preferences > Settings > Remote.
-	"settings": {
-		"terminal.integrated.shell.linux": "/bin/bash",
-		"python.pythonPath": "/usr/local/bin/python",
-		"python.formatting.provider": "black",
-		"python.linting.enabled": true,
-		"python.linting.flake8Enabled": true,
-		"python.linting.pylintEnabled": false,
-		"python.linting.mypyEnabled": true,
-		"python.testing.pytestEnabled": true,
-		"python.testing.pytestArgs": [
-			"pandas"
-		]
-	},
-
-	// Add the IDs of extensions you want installed when the container is created in the array below.
-	"extensions": [
-		"ms-python.python",
-		"ms-vscode.cpptools"
-	]
+	// Use `customizations/vscode/settings` to set *default* container specific
+	// settings.json values on container create. You can edit these settings
+	// after create using File > Preferences > Settings > Remote.
+	"customizations": {
+		"vscode": {
+			"settings": {
+				"terminal.integrated.defaultProfile.linux": "bash",
+				"python.pythonPath": "/usr/local/bin/python",
+				"python.formatting.provider": "black",
+				"python.linting.enabled": true,
+				"python.linting.flake8Enabled": true,
+				"python.linting.pylintEnabled": false,
+				"python.linting.mypyEnabled": true,
+				"python.testing.pytestEnabled": true,
+				"python.testing.pytestArgs": [
+					"pandas"
+				],
+				// Add the IDs of extensions you want installed when the
+				// container is created in the array below.
+				"extensions": [
+					"ms-python.python",
+					"ms-vscode.cpptools"
+				]
+			}
+		}
+	}
 }
