--- a/ci/meta.yaml
+++ b/ci/meta.yaml
@@ -34,7 +34,8 @@ requirements:
     - tomli  # [py<311]
   run:
     - python
-    - {{ pin_compatible('numpy') }}
+    - numpy >=1.21.6  # [py<311]
+    - numpy >=1.23.2  # [py>=311]
     - python-dateutil >=2.8.2
     - pytz >=2020.1
     - python-tzdata >=2022.1
