CI: Test Python 3.12 (#53743)
* CI: Test Python 3.12

* Update unit-tests.yml

* Update config.yml

* update

* fix condition

* fix some tests

* Remove wheel building for Python 3.12

* fix more

* Use timezone.utc

* Address typing, utcfromtimestamp

* fix some slice changes

* fix all indexing bugs?

* fix import

* go for green

* disable macos for now, fix other tests

* Update indexing.py

* finally fix?

* Update expr.py

* Update pandas/tests/computation/test_eval.py

Co-authored-by: Matthew Roeschke <10647082+mroeschke@users.noreply.github.com>

* Update test_eval.py

* Update test_eval.py

* fixes

* formatting

---------

Co-authored-by: Matthew Roeschke <10647082+mroeschke@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,8 +47,8 @@ jobs:
       - run:
           name: Build aarch64 wheels
           command: |
-            pip3 install cibuildwheel==2.12.1
-            cibuildwheel --output-dir wheelhouse
+            pip3 install cibuildwheel==2.14.1
+            cibuildwheel --prerelease-pythons --output-dir wheelhouse
           environment:
             CIBW_BUILD: << parameters.cibw-build >>
 
@@ -91,4 +91,5 @@ workflows:
               only: /^v.*/
           matrix:
             parameters:
-              cibw-build: ["cp39-manylinux_aarch64", "cp310-manylinux_aarch64", "cp311-manylinux_aarch64"]
+              # TODO: Enable Python 3.12 wheels when numpy releases a version that supports Python 3.12
+              cibw-build: ["cp39-manylinux_aarch64", "cp310-manylinux_aarch64", "cp311-manylinux_aarch64"]#, "cp312-manylinux_aarch64"]
