--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ requires = [
     "meson==1.0.1",
     "wheel",
     "Cython>=0.29.33,<3",  # Note: sync with setup.py, environment.yml and asv.conf.json
-    "oldest-supported-numpy>=2022.8.16",
+    # Note: numpy 1.25 has a backwards compatible C API by default
+    # we don't want to force users to compile with 1.25 though
+    # (Ideally, in the future, though, oldest-supported-numpy can be dropped when our min numpy is 1.25.x)
+    "oldest-supported-numpy>=2022.8.16; python_version<'3.12'",
+    "numpy>=1.21.6; python_version>='3.12'",
     "versioneer[toml]"
 ]
 
