--- a/pyproject.toml
+++ b/pyproject.toml
@@ -568,16 +568,50 @@ show_error_codes = true
 
 [[tool.mypy.overrides]]
 module = [
-  "pandas._config.config",  # TODO
+  "pandas._config.config", # TODO
   "pandas._libs.*",
-  "pandas._testing.*",  # TODO
-  "pandas.arrays",  # TODO
-  "pandas.compat.numpy.function",  # TODO
-  "pandas.compat._optional",  # TODO
-  "pandas.compat.compressors",  # TODO
-  "pandas.compat.pickle_compat",  # TODO
-  #"pandas.core.*",
-  # "pandas.core.indexes.*", # TODO
+  "pandas._testing.*", # TODO
+  "pandas.arrays", # TODO
+  "pandas.compat.numpy.function", # TODO
+  "pandas.compat._optional", # TODO
+  "pandas.compat.compressors", # TODO
+  "pandas.compat.pickle_compat", # TODO
+  "pandas.core._numba.executor", # TODO
+  "pandas.core.array_algos.datetimelike_accumulations", # TODO
+  "pandas.core.array_algos.masked_accumulations", # TODO
+  "pandas.core.array_algos.masked_reductions", # TODO
+  "pandas.core.array_algos.putmask", # TODO
+  "pandas.core.array_algos.quantile", # TODO
+  "pandas.core.array_algos.replace", # TODO
+  "pandas.core.array_algos.take", # TODO
+  "pandas.core.arrays.*", # TODO
+  "pandas.core.computation.*", # TODO
+  "pandas.core.dtypes.astype", # TODO
+  "pandas.core.dtypes.cast", # TODO
+  "pandas.core.dtypes.common", # TODO
+  "pandas.core.dtypes.concat", # TODO
+  "pandas.core.dtypes.dtypes", # TODO
+  "pandas.core.dtypes.generic", # TODO
+  "pandas.core.dtypes.inference", # TODO
+  "pandas.core.dtypes.missing", # TODO
+  "pandas.core.groupby.categorical", # TODO
+  "pandas.core.groupby.generic", # TODO
+  "pandas.core.groupby.grouper", # TODO
+  "pandas.core.groupby.groupby", # TODO
+  "pandas.core.groupby.ops", # TODO
+  "pandas.core.indexers.*", # TODO
+  "pandas.core.indexes.*", # TODO
+  "pandas.core.interchange.column", # TODO
+  "pandas.core.interchange.dataframe_protocol", # TODO
+  "pandas.core.interchange.from_dataframe", # TODO
+  "pandas.core.internals.*", # TODO
+  "pandas.core.methods.*", # TODO
+  "pandas.core.ops.array_ops", # TODO
+  "pandas.core.ops.common", # TODO
+  "pandas.core.ops.invalid", # TODO
+  "pandas.core.ops.mask_ops", # TODO
+  "pandas.core.ops.missing", # TODO
+  "pandas.core.reshape.*", # TODO
   "pandas.core.strings.*", # TODO
   "pandas.core.tools.*", # TODO
   "pandas.core.window.common", # TODO
@@ -586,48 +620,67 @@ module = [
   "pandas.core.window.numba_", # TODO
   "pandas.core.window.online", # TODO
   "pandas.core.window.rolling", # TODO
-  "pandas.errors",  # TODO
-  "pandas.io.clipboard",  # TODO
-  "pandas.io.excel._base",  # TODO
-  "pandas.io.excel._odfreader",  # TODO
-  "pandas.io.excel._odswriter",  # TODO
-  "pandas.io.excel._openpyxl",  # TODO
-  "pandas.io.excel._pyxlsb",  # TODO
-  "pandas.io.excel._xlrd",  # TODO
-  "pandas.io.excel._xlsxwriter",  # TODO
-  "pandas.io.formats.console",  # TODO
-  "pandas.io.formats.css",  # TODO
-  "pandas.io.formats.excel",  # TODO
-  "pandas.io.formats.format",  # TODO
-  "pandas.io.formats.info",  # TODO
-  "pandas.io.formats.printing",  # TODO
-  "pandas.io.formats.style",  # TODO
-  "pandas.io.formats.style_render",  # TODO
-  "pandas.io.formats.xml",  # TODO
-  "pandas.io.json.*",  # TODO
-  "pandas.io.parsers.*",  # TODO
-  "pandas.io.sas.sas_xport",  # TODO
-  "pandas.io.sas.sas7bdat",  # TODO
-  "pandas.io.clipboards",  # TODO
-  "pandas.io.common",  # TODO
-  "pandas.io.gbq",  # TODO
-  "pandas.io.html",  # TODO
-  "pandas.io.gbq",  # TODO
-  "pandas.io.parquet",  # TODO
-  "pandas.io.pytables",  # TODO
-  "pandas.io.sql",  # TODO
-  "pandas.io.stata",  # TODO
-  "pandas.io.xml",  # TODO
-  "pandas.plotting.*",  # TODO
+  "pandas.core.accessor", # TODO
+  "pandas.core.algorithms", # TODO
+  "pandas.core.apply", # TODO
+  "pandas.core.arraylike", # TODO
+  "pandas.core.base", # TODO
+  "pandas.core.common", # TODO
+  "pandas.core.config_init", # TODO
+  "pandas.core.construction", # TODO
+  "pandas.core.flags", # TODO
+  "pandas.core.frame", # TODO
+  "pandas.core.generic", # TODO
+  "pandas.core.indexing", # TODO
+  "pandas.core.missing", # TODO
+  "pandas.core.nanops", # TODO
+  "pandas.core.resample", # TODO
+  "pandas.core.roperator", # TODO
+  "pandas.core.sample", # TODO
+  "pandas.core.series", # TODO
+  "pandas.core.sorting", # TODO
+  "pandas.errors", # TODO
+  "pandas.io.clipboard", # TODO
+  "pandas.io.excel._base", # TODO
+  "pandas.io.excel._odfreader", # TODO
+  "pandas.io.excel._odswriter", # TODO
+  "pandas.io.excel._openpyxl", # TODO
+  "pandas.io.excel._pyxlsb", # TODO
+  "pandas.io.excel._xlrd", # TODO
+  "pandas.io.excel._xlsxwriter", # TODO
+  "pandas.io.formats.console", # TODO
+  "pandas.io.formats.css", # TODO
+  "pandas.io.formats.excel", # TODO
+  "pandas.io.formats.format", # TODO
+  "pandas.io.formats.info", # TODO
+  "pandas.io.formats.printing", # TODO
+  "pandas.io.formats.style", # TODO
+  "pandas.io.formats.style_render", # TODO
+  "pandas.io.formats.xml", # TODO
+  "pandas.io.json.*", # TODO
+  "pandas.io.parsers.*", # TODO
+  "pandas.io.sas.sas_xport", # TODO
+  "pandas.io.sas.sas7bdat", # TODO
+  "pandas.io.clipboards", # TODO
+  "pandas.io.common", # TODO
+  "pandas.io.gbq", # TODO
+  "pandas.io.html", # TODO
+  "pandas.io.gbq", # TODO
+  "pandas.io.parquet", # TODO
+  "pandas.io.pytables", # TODO
+  "pandas.io.sql", # TODO
+  "pandas.io.stata", # TODO
+  "pandas.io.xml", # TODO
+  "pandas.plotting.*", # TODO
   "pandas.tests.*",
-  "pandas.tseries.frequencies",  # TODO
-  "pandas.tseries.holiday",  # TODO
-  "pandas.util._decorators",  # TODO
-  "pandas.util._doctools",  # TODO
-  "pandas.util._print_versions",  # TODO
-  "pandas.util._test_decorators",  # TODO
-  "pandas.util._validators",  # TODO
-  "pandas.util",  # TODO
+  "pandas.tseries.frequencies", # TODO
+  "pandas.tseries.holiday", # TODO
+  "pandas.util._decorators", # TODO
+  "pandas.util._doctools", # TODO
+  "pandas.util._print_versions", # TODO
+  "pandas.util._test_decorators", # TODO
+  "pandas.util._validators", # TODO
+  "pandas.util", # TODO
   "pandas._version",
   "pandas.conftest",
   "pandas"
