--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
     -   id: ruff
         args: [--exit-non-zero-on-fix]
     -   id: ruff
+        # TODO: remove this when ANN204 is enabled (ANN001 might have autofixes in the future)
         name: ruff's autotyping/flake8-annotations autofixes
         args: [--select, ANN, --fix-only, --exit-non-zero-on-fix]
 -   repo: https://github.com/jendrikseipp/vulture
